--- a/messaging_app/chat/templates/chat/chatroom.html
+++ b/messaging_app/chat/templates/chat/chatroom.html
@@ -10,6 +10,16 @@
     <button id="chat-message-submit">Send</button>
 
     <script>
+        var input = document.getElementById("chat-message-input");
+        input.addEventListener("keypress", function(event) {
+            if (event.key === "Enter") {
+                event.preventDefault();
+                document.getElementById("chat-message-submit").click();
+             }
+            });
+
+
+
         const chatSocket = new WebSocket(
             'ws://' + window.location.host + '/chatroom/'
         );
