--- a/messaging_app/chat/templates/chat/chatroom.html
+++ b/messaging_app/chat/templates/chat/chatroom.html
@@ -1,18 +1,23 @@
-<!DOCTYPE html>
-<html>
+
 <head>
+    {% load static %}
     <title>Chat Room</title>
 
     <!--STYLES DUDE-->
     <style>
         body {
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: #f0f0f0;
+            font-family: Arial, sans-serif;
+            background-image: url("{% static 'images/cloud.jpg' %}");
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            color: #333;
+            margin: 0;
+            padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
         }
 
 
